Update to carlhuda/bundler-site@2871447ab95057952b364aed462386d17c4f57f4

--- a/gemfile.html
+++ b/gemfile.html
@@ -43,9 +43,10 @@
               Most of the version specifiers, like <code>>= 1.0</code>, are self-explanatory.
               The specifier <code>~></code> has a special meaning, best shown by example.
               <code>~> 2.0.3</code> is identical to <code>>= 2.0.3</code> and <code>< 2.1</code>.
-              <code>~> 2.1</code> is identical to <code>>= 2.1</code> and <code>< 2.2</code>.
+              <code>~> 2.1</code> is identical to <code>>= 2.1</code> and <code>< 3.0</code>.
               <code>~> 2.2.beta</code> will match prerelease versions like <code>2.2.beta.12</code>.
             </div>
+            <a href="http://docs.rubygems.org/read/chapter/16#page74">Rubygems version specifiers</a>
           </div>
           <div class="bullet">
             <div class="description">
