Update to carlhuda/bundler-site@4557ec9cc84edf6aac3dca9e319618f50ebe5a43

--- a/compatibility.html
+++ b/compatibility.html
@@ -73,6 +73,14 @@
               </p>
             </div>
           </div>
+          <div class="bullet">
+            <div class="description">
+              Rubygems 1.8.10
+            </div>
+            <div class="notes">
+              <p>Requires Bundler version 1.0.19. No known issues.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
