--- a/deploying.html
+++ b/deploying.html
@@ -59,7 +59,7 @@
             <div class="notes">
               That's it! Running <code>cap deploy</code> will now automatically run
               <code>bundle install</code> on the remote server with deployment-friendly
-              options. As list of options that can be changed is available in the help
+              options. A list of options that can be changed is available in the help
               for the cap task. To see it, run <code>cap -e bundle:install</code>.
             </div>
           </div>
