add 1.1 sections, misc fixes
carlhuda/bundler-site@e88c8e419871dc5cda588bfc9dc957571d33dafe

--- a/v0.9/gemfile.html
+++ b/v0.9/gemfile.html
@@ -108,9 +108,12 @@
     <a href="http://github.com/carlhuda/bundler/" id="github">
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
-    <div id="versions">
+    <div id="prod-versions">
       <a class="current" href="../v0.9/index.html">v0.9</a>
       <a class="" href="../v1.0/index.html">v1.0</a>
+    </div>
+    <div id="rc-versions">
+      <a class="" href="../v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
