--- a/sinatra.html
+++ b/sinatra.html
@@ -18,9 +18,15 @@
         <div class="contents">
           <div class="bullet">
             <div class="description">
+              Let's say you wanted to run the following Sinatra app.
+            </div>
+            <pre class="sunburst"><span class="Keyword">class</span> <span class="JEntityNameType">MySinatraApp<span class="EntityInheritedClass"> <span class="EntityInheritedClass">&lt;</span> Sinatra::Base</span></span>&#x000A;  get <span class="String"><span class="String">&quot;</span>/<span class="String">&quot;</span></span> <span class="Keyword">do</span>&#x000A;    <span class="String"><span class="String">&quot;</span>Hello Bundler<span class="String">&quot;</span></span>&#x000A;  <span class="Keyword">end</span>&#x000A;<span class="Keyword">end</span>&#x000A;</pre>
+          </div>
+          <div class="bullet">
+            <div class="description">
               To use bundler with a Sinatra application, you only need to do two things. First, create a Gemfile.
             </div>
-            <pre class="sunburst">gem <span class="String"><span class="String">&quot;</span>sinatra<span class="String">&quot;</span></span>&#x000A;</pre>
+            <pre class="sunburst">gem <span class="String"><span class="String">&quot;</span>sinatra<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>require</span> =&gt; <span class="String"><span class="String">&quot;</span>sinatra/base<span class="String">&quot;</span></span>&#x000A;</pre>
           </div>
           <div class="bullet">
             <div class="description">
@@ -82,9 +88,12 @@
     <a href="http://github.com/carlhuda/bundler/" id="github">
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
-    <div id="versions">
+    <div id="prod-versions">
       <a class="" href="v0.9/index.html">v0.9</a>
       <a class="current" href="v1.0/index.html">v1.0</a>
+    </div>
+    <div id="rc-versions">
+      <a class="" href="v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
