--- a/v1.1/bundle_init.html
+++ b/v1.1/bundle_init.html
@@ -14,28 +14,42 @@
             <img alt="The best way to manage your application's dependencies" src="../images/gembundler.png" width="725"/>
           </a>
         </div>
-        <h2>bundle install</h2>
+        <div id="v11-message">
+          We're currently working on updating this page for Bundler 1.1. If you think something is incorrect, missing or
+          if you have some other suggestion for how to improve the docs, please
+          <a href="https://github.com/carlhuda/bundler/issues">open a new github issue</a>.
+          Thanks!
+        </div>
+        <p></p>
+        <h2>bundle init</h2>
         <div class="contents">
           <div class="bullet">
             <div class="description">
-              Package up all your .gem files in vendor/cache
+              Generates a Gemfile into the current working directory
             </div>
-            <pre class='sunburst'>$ bundle package&#x000A;</pre>
+            <pre class='sunburst'>$ bundle init [--gemspec=FILE]</pre>
+            <div class="notes">
+              <p>
+                Options:
+              </p>
+              <p>
+                <code>--gemspec</code>: Use the specified .gemspec to create the Gemfile
+              </p>
+            </div>
+            <div class="description">
+              Init generates a default Gemfile in the current working directory. When adding a
+              Gemfile to a gem with a gemspec, the --gemspec option will automatically add each
+              dependency listed in the gemspec file to the newly created Gemfile.
+            </div>
           </div>
           <div class="bullet">
             <div class="description">
-              Running bundle install in an application with
-              packaged gems will use the gems in the package
-              and skip connecting to rubygems.org
+              (Example with default options TBD)
             </div>
-            <div class="how">
-              <pre class='sunburst'>$ bundle install</pre>
-              <div class="notes">
-                You can use this to avoid a dependency on
-                rubygems.org at deploy time, or if you
-                have private gems that are not in a public
-                repository
-              </div>
+          </div>
+          <div class="bullet" id="gemspec">
+            <div class="description">
+              (Example with --gemspec TBD)
             </div>
           </div>
         </div>
@@ -51,8 +65,6 @@
           <a href="./index.html">home</a>
           /
           <a href="./bundle_install.html">install</a>
-          /
-          <a href="./bundle_lock.html">lock</a>
           /
           <a href="./bundle_package.html">package</a>
         </p>
@@ -89,11 +101,11 @@
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
     <div id="prod-versions">
-      <a class="current" href="../v0.9/index.html">v0.9</a>
+      <a class="" href="../v0.9/index.html">v0.9</a>
       <a class="" href="../v1.0/index.html">v1.0</a>
     </div>
     <div id="rc-versions">
-      <a class="" href="../v1.1/index.html">v1.1 (coming soon)</a>
+      <a class="current" href="../v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
