--- a/v1.1/bundler_setup.html
+++ b/v1.1/bundler_setup.html
@@ -3,7 +3,7 @@
   <head>
     <title>Bundler: The best way to manage Ruby applications</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <link href="/stylesheets/application.css" media="all" rel="stylesheet" type="text/css"/><link href="/stylesheets/sunburst.css" media="all" rel="stylesheet" type="text/css"/>
+    <link href="../stylesheets/application.css" media="all" rel="stylesheet" type="text/css"/><link href="../stylesheets/sunburst.css" media="all" rel="stylesheet" type="text/css"/>
     <link href="/images/favicon.png" rel="shortcut icon" type="image/png" />
   </head>
   <body>
@@ -11,57 +11,40 @@
       <div id="contents">
         <div id="header">
           <a href="/">
-            <img alt="The best way to manage your application's dependencies" src="images/gembundler.png" width="725"/>
+            <img alt="The best way to manage your application's dependencies" src="../images/gembundler.png" width="725"/>
           </a>
         </div>
-        <h2>Using Groups</h2>
+        <div id="v11-message">
+          We're currently working on updating this page for Bundler 1.1. If you think something is incorrect, missing or
+          if you have some other suggestion for how to improve the docs, please
+          <a href="https://github.com/carlhuda/bundler/issues">open a new github issue</a>.
+          Thanks!
+        </div>
+        <p></p>
+        <h2>Bundler.setup</h2>
         <div class="contents">
           <div class="bullet">
             <div class="description">
-              Grouping your dependencies allows you
-              to perform operations on the entire
-              group.
+              Configure the load path so all dependencies in
+              your Gemfile can be required
             </div>
-            <pre class="sunburst"><span class="Comment"><span class="Comment">#</span> These gems are in the :default group</span>&#x000A;gem <span class="String"><span class="String">&quot;</span>nokogiri<span class="String">&quot;</span></span>&#x000A;gem <span class="String"><span class="String">&quot;</span>sinatra<span class="String">&quot;</span></span>&#x000A;&#x000A;gem <span class="String"><span class="String">&quot;</span>wirble<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>group</span> =&gt; <span class="Constant"><span class="Constant">:</span>development</span>&#x000A;&#x000A;group <span class="Constant"><span class="Constant">:</span>test</span> <span class="Keyword">do</span>&#x000A;  gem <span class="String"><span class="String">&quot;</span>rspec<span class="String">&quot;</span></span>&#x000A;  gem <span class="String"><span class="String">&quot;</span>faker<span class="String">&quot;</span></span>&#x000A;<span class="Keyword">end</span>&#x000A;</pre>
+            <pre class="sunburst"><span class="Keyword">require</span> <span class="String"><span class="String">&quot;</span>rubygems<span class="String">&quot;</span></span>&#x000A;<span class="Keyword">require</span> <span class="String"><span class="String">&quot;</span>bundler/setup<span class="String">&quot;</span></span>&#x000A;<span class="Keyword">require</span> <span class="String"><span class="String">&quot;</span>nokogiri<span class="String">&quot;</span></span>&#x000A;</pre>
           </div>
           <div class="bullet">
             <div class="description">
-              Install all dependencies, except
-              those in specified groups
-            </div>
-            <pre class='sunburst'>$ bundle install --without test development&#x000A;</pre>
-          </div>
-          <div class="bullet">
-            <div class="description">
-              Require the gems in particular groups,
-              noting that gems outside of a named group
-              are in the :default group
-            </div>
-            <pre class="sunburst"><span class="Support">Bundler</span>.<span class="Entity">require</span>(<span class="Constant"><span class="Constant">:</span>default</span>, <span class="Constant"><span class="Constant">:</span>development</span>)&#x000A;</pre>
-          </div>
-          <div class="bullet">
-            <div class="description">
-              Require the default gems, plus the gems
-              in a group named the same as the current
-              Rails environment
-            </div>
-            <pre class="sunburst"><span class="Support">Bundler</span>.<span class="Entity">require</span>(<span class="Constant"><span class="Constant">:</span>default</span>, <span class="Support">Rails</span>.<span class="Entity">env</span>)&#x000A;</pre>
-          </div>
-          <div class="bullet">
-            <div class="description">
-              Restrict the groups of gems that you
-              want to add to the load path. Only gems
-              in these groups will be require'able
+              Only add gems from specified groups to the
+              load path. If you want the gems in the
+              default group, make sure to include it
             </div>
             <pre class="sunburst"><span class="Keyword">require</span> <span class="String"><span class="String">&quot;</span>rubygems<span class="String">&quot;</span></span>&#x000A;<span class="Keyword">require</span> <span class="String"><span class="String">&quot;</span>bundler<span class="String">&quot;</span></span>&#x000A;<span class="Support">Bundler</span>.<span class="Entity">setup</span>(<span class="Constant"><span class="Constant">:</span>default</span>, <span class="Constant"><span class="Constant">:</span>ci</span>)&#x000A;<span class="Keyword">require</span> <span class="String"><span class="String">&quot;</span>nokogiri<span class="String">&quot;</span></span>&#x000A;</pre>
-            <a href="./bundler_setup.html">Learn More: Bundler.setup</a>
+            <a href="./groups.html">Learn More: Groups</a>
           </div>
         </div>
       </div>
     </div>
     <div id="footer">
-      <img alt="Emocow" src="images/emocow.png"/>
-      <img alt="Panda" src="images/panda.jpg"/>
+      <img alt="Emocow" src="../images/emocow.png"/>
+      <img alt="Panda" src="../images/panda.jpg"/>
       <div class="spacer"></div>
       <div id="navigation">
         <p>
@@ -96,7 +79,7 @@
         </p>
       </div>
       <div class="spacer"></div>
-      <img alt="Bundler small" src="images/bundler-small.png"/>
+      <img alt="Bundler small" src="../images/bundler-small.png"/>
     </div>
     <div id="credits">
       <p>Bundler icon and logo designed by <a href="http://twitter.com/johnneiner">John Neiner</a> and donated by <a href="http://pixelgraphics.us">Pixel Graphic Design Studio</a></p>
@@ -105,11 +88,11 @@
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
     <div id="prod-versions">
-      <a class="" href="v0.9/index.html">v0.9</a>
-      <a class="current" href="v1.0/index.html">v1.0</a>
+      <a class="" href="../v0.9/index.html">v0.9</a>
+      <a class="" href="../v1.0/index.html">v1.0</a>
     </div>
     <div id="rc-versions">
-      <a class="" href="v1.1/index.html">v1.1 (coming soon)</a>
+      <a class="current" href="../v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
