--- a/v1.1/compatibility.html
+++ b/v1.1/compatibility.html
@@ -14,28 +14,70 @@
             <img alt="The best way to manage your application's dependencies" src="../images/gembundler.png" width="725"/>
           </a>
         </div>
-        <h2>bundle install</h2>
+        <div id="v11-message">
+          We're currently working on updating this page for Bundler 1.1. If you think something is incorrect, missing or
+          if you have some other suggestion for how to improve the docs, please
+          <a href="https://github.com/carlhuda/bundler/issues">open a new github issue</a>.
+          Thanks!
+        </div>
+        <p></p>
+        <h2>Bundler compatibility with Rubygems</h2>
         <div class="contents">
           <div class="bullet">
             <div class="description">
-              Package up all your .gem files in vendor/cache
+              Bundler <b>1.0</b> requires a minimum Rubygems version of <b>1.3.6</b>.
             </div>
-            <pre class='sunburst'>$ bundle package&#x000A;</pre>
           </div>
           <div class="bullet">
             <div class="description">
-              Running bundle install in an application with
-              packaged gems will use the gems in the package
-              and skip connecting to rubygems.org
+              Rubygems 1.3.7
             </div>
-            <div class="how">
-              <pre class='sunburst'>$ bundle install</pre>
-              <div class="notes">
-                You can use this to avoid a dependency on
-                rubygems.org at deploy time, or if you
-                have private gems that are not in a public
-                repository
-              </div>
+            <div class="notes">
+              Bundler is unable to find prerelease gems cached via the <code>bundle pack</code> command.
+            </div>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              Rubygems 1.4.2
+            </div>
+            <div class="notes">
+              No known issues.
+            </div>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              Rubygems 1.5.3
+            </div>
+            <div class="notes">
+              Requires Bundler version 1.0.10. No known issues.
+            </div>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              Rubygems 1.6.2
+            </div>
+            <div class="notes">
+              Requires Bundler version 1.0.11. No known issues.
+            </div>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              Rubygems 1.7.2
+            </div>
+            <div class="notes">
+              Requires Bundler version 1.0.11. No known issues.
+            </div>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              Rubygems 1.8.3
+            </div>
+            <div class="notes">
+              <p>Requires Bundler version 1.0.14. No known issues.</p>
+              <p>
+                Users with Rubygems 1.8.0-1.8.2 may encounter exceptions running <code>rake</code>.
+                They should use <code>bundle exec rake</code> instead.
+              </p>
             </div>
           </div>
         </div>
@@ -51,8 +93,6 @@
           <a href="./index.html">home</a>
           /
           <a href="./bundle_install.html">install</a>
-          /
-          <a href="./bundle_lock.html">lock</a>
           /
           <a href="./bundle_package.html">package</a>
         </p>
@@ -89,11 +129,11 @@
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
     <div id="prod-versions">
-      <a class="current" href="../v0.9/index.html">v0.9</a>
+      <a class="" href="../v0.9/index.html">v0.9</a>
       <a class="" href="../v1.0/index.html">v1.0</a>
     </div>
     <div id="rc-versions">
-      <a class="" href="../v1.1/index.html">v1.1 (coming soon)</a>
+      <a class="current" href="../v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
