--- a/v1.1/gemfile.html
+++ b/v1.1/gemfile.html
@@ -3,7 +3,7 @@
   <head>
     <title>Bundler: The best way to manage Ruby applications</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <link href="/stylesheets/application.css" media="all" rel="stylesheet" type="text/css"/><link href="/stylesheets/sunburst.css" media="all" rel="stylesheet" type="text/css"/>
+    <link href="../stylesheets/application.css" media="all" rel="stylesheet" type="text/css"/><link href="../stylesheets/sunburst.css" media="all" rel="stylesheet" type="text/css"/>
     <link href="/images/favicon.png" rel="shortcut icon" type="image/png" />
   </head>
   <body>
@@ -11,9 +11,16 @@
       <div id="contents">
         <div id="header">
           <a href="/">
-            <img alt="The best way to manage your application's dependencies" src="images/gembundler.png" width="725"/>
+            <img alt="The best way to manage your application's dependencies" src="../images/gembundler.png" width="725"/>
           </a>
         </div>
+        <div id="v11-message">
+          We're currently working on updating this page for Bundler 1.1. If you think something is incorrect, missing or
+          if you have some other suggestion for how to improve the docs, please
+          <a href="https://github.com/carlhuda/bundler/issues">open a new github issue</a>.
+          Thanks!
+        </div>
+        <p></p>
         <h2>In Depth</h2>
         <div class="contents">
           <div class="bullet">
@@ -21,7 +28,7 @@
               Read the manual for an in-depth discussion of all of the options available in the
               <code>Gemfile</code> and how to use them.
             </div>
-            <a href="./man/gemfile.5.html">Gemfile manual</a>
+            <a href="../man/gemfile.5.html">Gemfile manual</a>
           </div>
         </div>
         <h2>Gemfiles</h2>
@@ -51,11 +58,8 @@
           <div class="bullet">
             <div class="description">
               If a gem's main file is different than the gem name, specify how to require it.
-              Or use <code>false</code> to prevent bundler to require it (but it will still
-              install it and maintain dependencies). And for gems with several files to require,
-              it's also possible to give an array to <code>:require</code>.
             </div>
-            <pre class="sunburst">gem <span class="String"><span class="String">&quot;</span>rspec<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>require</span> =&gt; <span class="String"><span class="String">&quot;</span>spec<span class="String">&quot;</span></span>&#x000A;gem <span class="String"><span class="String">&quot;</span>sqlite3-ruby<span class="String">&quot;</span></span>, <span class="String"><span class="String">&quot;</span>1.2.5<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>require</span> =&gt; <span class="String"><span class="String">&quot;</span>sqlite3<span class="String">&quot;</span></span>&#x000A;gem <span class="String"><span class="String">&quot;</span>gem-release<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>require</span> =&gt; <span class="Constant">false</span>&#x000A;gem <span class="String"><span class="String">&quot;</span>redis<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>require</span> =&gt; [<span class="String"><span class="String">&quot;</span>redis/connection/hiredis<span class="String">&quot;</span></span>, <span class="String"><span class="String">&quot;</span>redis<span class="String">&quot;</span></span>]&#x000A;</pre>
+            <pre class="sunburst">gem <span class="String"><span class="String">&quot;</span>rspec<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>require</span> =&gt; <span class="String"><span class="String">&quot;</span>spec<span class="String">&quot;</span></span>&#x000A;gem <span class="String"><span class="String">&quot;</span>sqlite3-ruby<span class="String">&quot;</span></span>, <span class="String"><span class="String">&quot;</span>1.2.5<span class="String">&quot;</span></span>, <span class="Constant"><span class="Constant">:</span>require</span> =&gt; <span class="String"><span class="String">&quot;</span>sqlite3<span class="String">&quot;</span></span>&#x000A;</pre>
             <div class="notes">
               In order to require gems in your <code>Gemfile</code>, you will need to call
               <code>Bundler.require</code> in your application.
@@ -95,8 +99,8 @@
       </div>
     </div>
     <div id="footer">
-      <img alt="Emocow" src="images/emocow.png"/>
-      <img alt="Panda" src="images/panda.jpg"/>
+      <img alt="Emocow" src="../images/emocow.png"/>
+      <img alt="Panda" src="../images/panda.jpg"/>
       <div class="spacer"></div>
       <div id="navigation">
         <p>
@@ -131,7 +135,7 @@
         </p>
       </div>
       <div class="spacer"></div>
-      <img alt="Bundler small" src="images/bundler-small.png"/>
+      <img alt="Bundler small" src="../images/bundler-small.png"/>
     </div>
     <div id="credits">
       <p>Bundler icon and logo designed by <a href="http://twitter.com/johnneiner">John Neiner</a> and donated by <a href="http://pixelgraphics.us">Pixel Graphic Design Studio</a></p>
@@ -140,11 +144,11 @@
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
     <div id="prod-versions">
-      <a class="" href="v0.9/index.html">v0.9</a>
-      <a class="current" href="v1.0/index.html">v1.0</a>
+      <a class="" href="../v0.9/index.html">v0.9</a>
+      <a class="" href="../v1.0/index.html">v1.0</a>
     </div>
     <div id="rc-versions">
-      <a class="" href="v1.1/index.html">v1.1 (coming soon)</a>
+      <a class="current" href="../v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
