--- a/v1.1/rails3.html
+++ b/v1.1/rails3.html
@@ -14,6 +14,13 @@
             <img alt="The best way to manage your application's dependencies" src="../images/gembundler.png" width="725"/>
           </a>
         </div>
+        <div id="v11-message">
+          We're currently working on updating this page for Bundler 1.1. If you think something is incorrect, missing or
+          if you have some other suggestion for how to improve the docs, please
+          <a href="https://github.com/carlhuda/bundler/issues">open a new github issue</a>.
+          Thanks!
+        </div>
+        <p></p>
         <div id="intro">
           Rails 3 comes with baked in support with bundler.
         </div>
@@ -67,7 +74,7 @@
               at once as well
             </div>
             <pre class="sunburst">group <span class="Constant"><span class="Constant">:</span>development</span>, <span class="Constant"><span class="Constant">:</span>test</span> <span class="Keyword">do</span>&#x000A;  gem <span class="String"><span class="String">&quot;</span>wirble<span class="String">&quot;</span></span>&#x000A;  gem <span class="String"><span class="String">&quot;</span>ruby-debug<span class="String">&quot;</span></span>&#x000A;<span class="Keyword">end</span>&#x000A;</pre>
-            <a href="../groups.html">Learn More: Groups</a>
+            <a href="./groups.html">Learn More: Groups</a>
           </div>
           <div class="bullet">
             <div class="description">
@@ -83,43 +90,6 @@
               </div>
             </div>
           </div>
-          <div class="bullet">
-            <div class="description">
-              Don't forget that non-Rails commands must
-              be executed with bundle exec
-            </div>
-            <pre class='sunburst'>$ bundle exec cucumber&#x000A;</pre>
-          </div>
-        </div>
-        <h2>Sharing</h2>
-        <div class="contents">
-          <div class="bullet">
-            <div class="description">
-              When you're ready to share your application,
-              lock down your dependencies to the specific
-              versions you are using now. This will ensure
-              that other machines use exactly these gems,
-              and are not affected by new releases of gems
-              in the interim
-            </div>
-            <pre class='sunburst'>$ bundle lock&#x000A;$ git add Gemfile.lock</pre>
-            <a href="../bundle_lock.html">Learn More: bundle lock</a>
-          </div>
-          <div class="bullet">
-            <div class="description">
-              After locking your dependencies you may not
-              modify the Gemfile without unlocking first
-            </div>
-            <pre class='sunburst'>$ bundle unlock&#x000A;</pre>
-          </div>
-          <div class="bullet">
-            <div class="description">
-              If you've updated your Gemfile and want to
-              install the new gems and re-lock once the new
-              gems are finished installing
-            </div>
-            <pre class='sunburst'>$ bundle install --relock</pre>
-          </div>
         </div>
       </div>
     </div>
@@ -133,8 +103,6 @@
           <a href="./index.html">home</a>
           /
           <a href="./bundle_install.html">install</a>
-          /
-          <a href="./bundle_lock.html">lock</a>
           /
           <a href="./bundle_package.html">package</a>
         </p>
@@ -171,11 +139,11 @@
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
     <div id="prod-versions">
-      <a class="current" href="../v0.9/index.html">v0.9</a>
+      <a class="" href="../v0.9/index.html">v0.9</a>
       <a class="" href="../v1.0/index.html">v1.0</a>
     </div>
     <div id="rc-versions">
-      <a class="" href="../v1.1/index.html">v1.1 (coming soon)</a>
+      <a class="current" href="../v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
