--- a/v1.1/rubygems.html
+++ b/v1.1/rubygems.html
@@ -14,29 +14,62 @@
             <img alt="The best way to manage your application's dependencies" src="../images/gembundler.png" width="725"/>
           </a>
         </div>
-        <h2>bundle install</h2>
+        <div id="v11-message">
+          We're currently working on updating this page for Bundler 1.1. If you think something is incorrect, missing or
+          if you have some other suggestion for how to improve the docs, please
+          <a href="https://github.com/carlhuda/bundler/issues">open a new github issue</a>.
+          Thanks!
+        </div>
+        <p></p>
+        <h2>Using Bundler with Rubygem gemspecs</h2>
         <div class="contents">
           <div class="bullet">
             <div class="description">
-              Package up all your .gem files in vendor/cache
+              If you're creating a gem from scratch, you can use bundler's built in gem skeleton to create a base gem for you to edit.
             </div>
-            <pre class='sunburst'>$ bundle package&#x000A;</pre>
+            <div class="how">
+              <pre class='sunburst'>$ bundle gem my_gem</pre>
+              <div class="notes">
+                This will create a new directory named <code>my_gem</code> with your new gem skeleton.
+              </div>
+            </div>
           </div>
           <div class="bullet">
             <div class="description">
-              Running bundle install in an application with
-              packaged gems will use the gems in the package
-              and skip connecting to rubygems.org
+              If you already have a gem with a gemspec, you can generate a Gemfile for your gem.
             </div>
-            <div class="how">
-              <pre class='sunburst'>$ bundle install</pre>
-              <div class="notes">
-                You can use this to avoid a dependency on
-                rubygems.org at deploy time, or if you
-                have private gems that are not in a public
-                repository
-              </div>
+            <pre class='sunburst'>$ bundle init</pre>
+            <div class="notes">
+              Then, add the following to your new Gemfile
             </div>
+            <pre class="sunburst">gemspec&#x000A;</pre>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              Runtime dependencies in your gemspec are treated like base dependencies, and development dependencies are added by default to the group, <code>:development</code>. You can change that group with the <code>:development_group</code> option
+            </div>
+            <pre class="sunburst">gemspec <span class="Constant"><span class="Constant">:</span>development_group</span> =&gt; <span class="Constant"><span class="Constant">:</span>dev</span>&#x000A;</pre>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              As well, you can point to a specific gemspec using <code>:path</code>. If your gemspec is in <code>/gemspec/path</code>, use
+            </div>
+            <pre class="sunburst">gemspec <span class="Constant"><span class="Constant">:</span>path</span> =&gt; <span class="String"><span class="String">'</span>/gemspec/path<span class="String">'</span></span>&#x000A;</pre>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              If you have multiple gemspecs in the same directory, specify which one you'd like to reference using <code>:name</code>
+            </div>
+            <pre class="sunburst">gemspec <span class="Constant"><span class="Constant">:</span>name</span> =&gt; <span class="String"><span class="String">'</span>my_awesome_gem<span class="String">'</span></span>&#x000A;</pre>
+            <div class="notes">
+              This will use <code>my_awesome_gem.gemspec</code>
+            </div>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              That's it! Use bundler when developing your gem, and otherwise, use gemspecs normally!
+            </div>
+            <pre class='sunburst'>$ gem build my_gem.gemspec</pre>
           </div>
         </div>
       </div>
@@ -51,8 +84,6 @@
           <a href="./index.html">home</a>
           /
           <a href="./bundle_install.html">install</a>
-          /
-          <a href="./bundle_lock.html">lock</a>
           /
           <a href="./bundle_package.html">package</a>
         </p>
@@ -89,11 +120,11 @@
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
     <div id="prod-versions">
-      <a class="current" href="../v0.9/index.html">v0.9</a>
+      <a class="" href="../v0.9/index.html">v0.9</a>
       <a class="" href="../v1.0/index.html">v1.0</a>
     </div>
     <div id="rc-versions">
-      <a class="" href="../v1.1/index.html">v1.1 (coming soon)</a>
+      <a class="current" href="../v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
