--- a/v1.1/sinatra.html
+++ b/v1.1/sinatra.html
@@ -14,29 +14,32 @@
             <img alt="The best way to manage your application's dependencies" src="../images/gembundler.png" width="725"/>
           </a>
         </div>
-        <h2>bundle install</h2>
+        <div id="v11-message">
+          We're currently working on updating this page for Bundler 1.1. If you think something is incorrect, missing or
+          if you have some other suggestion for how to improve the docs, please
+          <a href="https://github.com/carlhuda/bundler/issues">open a new github issue</a>.
+          Thanks!
+        </div>
+        <p></p>
+        <h2>Using Bundler with Sinatra</h2>
         <div class="contents">
           <div class="bullet">
             <div class="description">
-              Package up all your .gem files in vendor/cache
+              To use bundler with a Sinatra application, you only need to do two things. First, create a Gemfile.
             </div>
-            <pre class='sunburst'>$ bundle package&#x000A;</pre>
+            <pre class="sunburst">gem <span class="String"><span class="String">&quot;</span>sinatra<span class="String">&quot;</span></span>&#x000A;</pre>
           </div>
           <div class="bullet">
             <div class="description">
-              Running bundle install in an application with
-              packaged gems will use the gems in the package
-              and skip connecting to rubygems.org
+              Then, set up your config.ru file to load the bundle before it loads your Sinatra app.
             </div>
-            <div class="how">
-              <pre class='sunburst'>$ bundle install</pre>
-              <div class="notes">
-                You can use this to avoid a dependency on
-                rubygems.org at deploy time, or if you
-                have private gems that are not in a public
-                repository
-              </div>
+            <pre class="sunburst"><span class="Keyword">require</span> <span class="String"><span class="String">'</span>rubygems<span class="String">'</span></span>&#x000A;<span class="Keyword">require</span> <span class="String"><span class="String">'</span>bundler<span class="String">'</span></span>&#x000A;&#x000A;<span class="Support">Bundler</span>.<span class="Entity">require</span>&#x000A;&#x000A;<span class="Keyword">require</span> <span class="String"><span class="String">'</span>./my_sinatra_app<span class="String">'</span></span>&#x000A;run <span class="Variable">MySinatraApp</span>&#x000A;</pre>
+          </div>
+          <div class="bullet">
+            <div class="description">
+              Start your development server with rackup, and Sinatra will be loaded via Bundler.
             </div>
+            <pre class='sunburst'>$ rackup</pre>
           </div>
         </div>
       </div>
@@ -51,8 +54,6 @@
           <a href="./index.html">home</a>
           /
           <a href="./bundle_install.html">install</a>
-          /
-          <a href="./bundle_lock.html">lock</a>
           /
           <a href="./bundle_package.html">package</a>
         </p>
@@ -89,11 +90,11 @@
       <img alt="Fork me on GitHub" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" />
     </a>
     <div id="prod-versions">
-      <a class="current" href="../v0.9/index.html">v0.9</a>
+      <a class="" href="../v0.9/index.html">v0.9</a>
       <a class="" href="../v1.0/index.html">v1.0</a>
     </div>
     <div id="rc-versions">
-      <a class="" href="../v1.1/index.html">v1.1 (coming soon)</a>
+      <a class="current" href="../v1.1/index.html">v1.1 (coming soon)</a>
     </div>
     <script type="text/javascript">
       //<![CDATA[
